--- a/src/scss/utilities/_functions.scss
+++ b/src/scss/utilities/_functions.scss
@@ -1,5 +1,5 @@
 @use "sass:map";
-@use "variables" as var;
+@use "./variables" as var;
 
 @function get-color($key) {
    @return map.get(var.$colors, $key)
