add sidebar/ mob menu scss

--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -3,3 +3,8 @@
 @forward 'tasks';
 @forward 'reports';
 @forward 'btn/btn';
+@forward 'menu';
+@forward 'logo';
+@forward 'notification';
+@forward 'menu-btn';
+@forward 'notification';
