co-workers section scss

--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -1,5 +1,4 @@
 @forward 'welcome';
-@forward 'co-workers';
 @forward 'tasks';
 @forward 'reports';
 @forward 'btn/btn';
@@ -8,3 +7,7 @@
 @forward 'notification';
 @forward 'menu-btn';
 @forward 'notification';
+@forward 'notification-btn';
+@forward 'search';
+@forward 'coworkers';
+@forward 'badges';
