--- a/src/scss/components/_tasks.scss
+++ b/src/scss/components/_tasks.scss
@@ -1,27 +1,102 @@
+@use '../utilities/placeholders';
+@use '../utilities/variables' as var;
+@use '../utilities/functions' as fn;
+@use '../utilities/mixins' as mx;
+
 .tasks {
+    @extend %section-frame;
     grid-area: tasks;
+    min-width: 340px;
+    min-height: 420px;
+    background-color: fn.get-color('darck-tertiary');
 }
 .tasks-title {
+    @extend %details;
+    margin-bottom: 36px;
+    color: fn.get-color('light-secondary');
+
+    span{
+        @extend %accent-text;
+        color: fn.get-color('light-primary');
+    }
 }
+
+
 .tasks-list {
+    @include mx.scroll-bar;
+    max-height: 288px;
+    overflow: auto;
+    margin-right: -16px;
+
+    @include mx.mq('lg'){
+        margin-right: -20px;
+    }
 }
 .tasks-item {
+    display: flex;
+    align-items: center;
+    gap: 16px;
+    padding: 16px 8px;
+    border-top: 1px solid;
+    border-color: fn.get-color('light-tertiary');
 }
 .tasks-checkbox {
+    flex-shrink: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
 }
-.tasks-input {
+.tasks-input:checked + .tasks-checkbox-icon{
+    fill: fn.get-color('light-primary');
+    background-color: fn.get-color('accent-primary');
+    border-color: fn.get-color('transparent');
+
+
 }
-.visually-hidden {
+.tasks-input:focus-visible + .tasks-checkbox-icon{
+   
+        outline: 2px solid;
+        outline-color: fn.get-color('light-tertiary');
+        outline-offset: 2px;
+
 }
+
+
 .tasks-checkbox-icon {
+    @include mx.ease('fast', fill, background-color, border-color);
+    fill: fn.get-color('transparent');
+    border: 1px solid;
+    border-color: fn.get-color('light-tertiary');
+    border-radius: 4px;
 }
 .tasks-info {
+    flex-grow: 1;
 }
 .tasks-hesding {
+    @extend %details;
+    color: fn.get-color('light-primary');
 }
 .tasks-desc {
+    @extend %details;
+    color: fn.get-color('light-secondary');
 }
 .tasks-btn {
+    @include mx.ease('fast', outline);
+
+    width: 20px;
+    height: 20px;
+    color: fn.get-color('light-tertiary');
+    border-radius: 50%;
+
+    &:focus-visible{
+        outline: 2px solid;
+        outline-color: rgba($color: fn.get-color('light-tertiary'), $alpha: 0.6);
+        outline-offset: 2px;
+    }
 }
 .tasks-btn-icon {
+    fill: fn.get-color('current');
 }
